--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgba(0, 10, 31, 255);
+  /* overflow-y: scroll; */
 }
 
 code {
@@ -15,4 +16,40 @@ code {
 
 .link{
   cursor: pointer;
+}
+
+.navbar.colorChange{
+  box-shadow: #00C7FF;
+}
+
+.navbar{
+  box-shadow: none;
+}
+
+
+
+@media all and (min-width:768px) and (max-width:1024px){
+  #whole-item{
+    margin-left: 0px;
+    
+  }
+}
+@media all and (min-width:425px) and (max-width:767px){
+  #whole-item{
+    margin-left: 0px;
+    
+  }
+}
+@media all and (min-width:375px) and (max-width:425px){
+  #whole-item{
+    margin-left: 0px;
+    
+  }
+}
+@media all and (min-width:320px) and (max-width:375px){
+  #whole-item{
+    margin-left: 0px;
+  
+  }
+
 }
